# reachml

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  reachable_db.h5  requirements.txt
.github/workflows/: ci.yml
iclr2024/data/: fico_complex_1D.actionset  fico_complex_nD.actionset  fico_simple_1D.actionset  german_complex_1D.actionset  german_complex_nD.actionset  german_complex_nD.data  german_simple_1D.actionset  givemecredit_complex_1D.actionset  givemecredit_complex_nD.actionset  givemecredit_simple_1D.actionset
iclr2024/data/credit/: credit_raw.csv  process_credit.py
iclr2024/data/german/: process_german.py
iclr2024/data/twitterbot/: process_twitterbot.py  twitterbot_data.csv  twitterbot_helper.csv
iclr2024/notebooks/: extra_paper_analyses.ipynb
iclr2024/reporting/: make_report.R
iclr2024/reporting/templates/: create_big_table.R  demo_report.Rmd
iclr2024/scripts/: compute_stats.py  generate_reachable_sets.py  get_model_stats.py  merge_stats.py  print_actionset.py  run_ar.py  run_audit.py  run_dice.py  run_experiment_pipeline.py  setup_dataset_actionset_fico.py  setup_dataset_actionset_german.py  setup_dataset_actionset_givemecredit.py  train_models.py  utils.py
iclr2024/src/: fileutils.py  paths.py  training.py
reachml/: __init__.py  action_element.py  action_set.py  cplex_utils.py  database.py  datasets.py  enumeration.py  mip.py  printer.py  reachable_set.py  scoring.py  utils.py
reachml/constraints/: __init__.py  abstract.py  directional_linkage.py  ifthen.py  onehot.py  ordinal.py  reachability.py  switch.py  thermometer.py
research/iclr2024/: README.md
research/iclr2024/notebooks/: create_timing_chart_data.py  fico_barplot.ipynb  paper_tables.ipynb
research/iclr2024/reporting/: .gitignore  README.md  setup_R.py  utils.py
research/iclr2024/scripts/: run_ar.py  (+11 more)
tests/: conftest.py  test_bounds.py  test_constraints_directional_linkage.py  test_constraints_ifthen.py  test_constraints_onehot.py  test_constraints_ordinal.py  test_constraints_reachability.py  test_constraints_switch.py  test_constraints_thermometer.py  test_database.py  test_enumeration.py  test_interface.py  test_scorer.py
(+47 files in other folders)
